# ir-project

./: __main__.py  pyproject.toml  test.ipynb
.cph/: .E_Air_Conditioners.py_d25172589802743cde407e9d196d5130.prob
corpus/: football1.txt  football2.txt  football3.txt  math1.txt  math2.txt  math3.txt  movies1.txt  movies2.txt  movies3.txt  programming1.txt  programming2.txt  programming3.txt  search_engines1.txt  search_engines2.txt  search_engines3.txt
preprocessors/: __init__.py  stemmer.py  tokenizer.py
ranker/: __init__.py  vector_space.py
utils/: __init__.py  index_file.py
