[tool.poetry]
name = "ir-project"
version = "0.1.0"
description = ""
authors = ["Hundera Awoke <hunderaweke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypistats = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
